fix inputbox spacing

--- a/app/assets/custom.css
+++ b/app/assets/custom.css
@@ -43,6 +43,7 @@ body {
 
 .input-box {
     padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 
 .username-blob {
